@@ -147,12 +147,6 @@ Get the userData item attribute.
 
 If this item is tracking a window then return it.  NULL otherwise.
 
-\membersection{wxSizerItem::IsShown}\label{wxsizeritemisshown}
-
-\constfunc{bool}{IsShown}{\void}
-
-Is this item shown?
-
 
 \membersection{wxSizerItem::IsSizer}\label{wxsizeritemissizer}
 
